# trabalho_quiosque

./: .env  .gitignore  README.md  dica.txt  pyproject.toml  requeriments.txt
ambiente/: pyvenv.cfg
ambiente/Scripts/: activate  activate.bat
migrations/: env.py
migrations/versions/: 4d1613611f63_locale_default_seting.py  7c02706e4dfb_device_group.py  c173c5b98921_init.py  cb0a5f39ca58_screen_group.py  fca89f1b9733_user_master_add.py
projeto/: .gitignore  README.md  app.py  database.db  requirements.txt
projeto/static/css/: painel_adm.css  painel_exibicao.css  painel_login.css
projeto/static/js/: painel_adm.js  painel_exibicao.js  painel_login.js
projeto/templates/: painel_adm.html  painel_exibicao.html  painel_login.html  redefinir_senha.html
prosecco/: app.py  main.py
prosecco/config/: __init__.py  types.py
prosecco/docs/: alex_db_2025-05-09T20_51_28.153Z.sql
prosecco/models/: __init__.py  allowed_ip.py  device.py  file.py  file_trk.py  login.py  models.py  user.py
prosecco/routes/: __init__.py  administrative_routes.py  login.py  register.py  routes.py  upload.py
prosecco/static/css/: painel_adm.css  painel_exibicao.css  painel_login.css
prosecco/static/img/uploads/: README.md
prosecco/static/js/: device_list_fetch.js  painel_adm.js  painel_exibicao.js  user_adm_add.js  user_list_fetch.js
prosecco/templates/: painel_adm.html  painel_exibicao.html  painel_login.html  recuperar_senha.html  register.html  upload.html
prosecco/utils/: __init__.py  custom_verify.py  file_process.py  file_upload.py
