[project]
name = 'prosecco'
version = '0.1.0'
description = ''
authors = [
    {name = 'Loian_Sousa',email = 'loiansouza@outlook.com'},
    {name = 'Dirceu_Alves',email = 'netinhoalves_2011@hotmail.com'},
    {name = 'V.Guilherme',email = 'v.guilherme.barreto@gmail.com'}
]
readme = 'README.md'
requires-python = '3.12.10'
dependencies = [
    'flask (>=3.1.1,<4.0.0)',
    'flask-migrate (>=4.1.0,<5.0.0)',
    'flask-sqlalchemy (>=3.1.1,<4.0.0)',
    'passlib (>=1.7.4,<2.0.0)',
    'python-dotenv (>=1.1.0,<2.0.0)',
    'python-jose (>=3.4.0,<4.0.0)',
    'taskipy (>=1.14.1,<2.0.0)',
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-limiter (>=3.12,<4.0)",
]


[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry.scripts]
flask = "flask.cli:main"

[tool.taskipy.tasks]
run = 'flask --app prosecco/main run --debug'
db = 'flask --app prosecco/main db'